@@ -3,7 +3,6 @@ package ceri.ent.service;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -203,7 +202,7 @@ public class ServiceCache<K, V> implements Service<K, V>, Persistable {
 	}
 
 	private Map<K, Entry<K, V>> toMap(Collection<Entry<K, V>> entries) {
-		if (entries == null) return Collections.emptyMap();
+		if (entries == null) return Map.of();
 		Map<K, Entry<K, V>> map = new HashMap<>();
 		for (Entry<K, V> entry : entries)
 			map.put(entry.key, entry);
